plugins {
    id 'java'
}

group 'example.tiny.di'
version '1.0.0.0'

sourceCompatibility = 11

repositories {
    mavenCentral()
}

dependencies {
    implementation group: 'javax.inject', name: 'javax.inject', version: '1'
    implementation group: 'org.javassist', name: 'javassist', version: '3.20.0-GA'
    testImplementation group: 'junit', name: 'junit', version: '4.12'

    compileOnly 'org.projectlombok:lombok:1.18.20'
    annotationProcessor 'org.projectlombok:lombok:1.18.20'
}
